# ETSS-02-VehicleDetTrack

./: .gitignore  README.md  aicity2021_multithread_main.py  aicity2021_multithread_main_compress.py  linux.yaml  main.py  main_all.py  main_all_multiprocess.py  main_all_multiprocess_multithread.py  main_all_multithread.py  main_multithread.py  main_non_detection.py  requirements.txt
src/tfe/: main.py  main_all.py  main_all_multiprocess.py  main_all_multiprocess_multithread.py  main_gui.py  pyproject.toml  run_gui_vehicle_detection_tracking.sh  run_inference.sh  run_ultilites.sh  setup.sh
src/tfe/camera/: camera_multiprocess.py  camera_multithread.py  camera_non_detection.py
src/tfe/data/Korea_cctv_rain/: labels.json
src/tfe/data/Korea_cctv_rain/configs/: 23.yaml  23_yolov11.yaml
src/tfe/data/Korea_cctv_rain/rmois/: 23.json
src/tfe/data/Korea_cctv_rain/rmois_description/: 23.json
src/tfe/data/aicity2021_final/configs/: cam_1.yaml  cam_11.yaml  cam_15.yaml  cam_1_dawn.yaml  cam_2.yaml  cam_4.yaml  cam_6.yaml  cam_6_snow.yaml  cam_9.yaml
src/tfe/data/aicity2021_final/configs_2GPUs/: cam_1.yaml  cam_11.yaml  cam_14.yaml  cam_15.yaml  cam_3.yaml  cam_7.yaml  cam_9.yaml
src/tfe/data/aicity2021_final/rmois/: cam_1.json  cam_10.json  cam_16.json  cam_17.json  cam_18.json  cam_1_dawn.json  (+7 more)
src/tfe/data/carla_night/: __init__.py
src/tfe/detector/: detection.py
src/tfe/io/: video.py
src/tfe/ops/: color.py
src/tfe/road_objects/: general_object.py  gmo.py  motion_model.py
src/tfe/tfe/: configuration.py
src/tfe/tfe/camera/: __init__.py  camera.py  camera_multiprocess.py  camera_multithread.py
src/tfe/tfe/cameras/: __init__.py  camera.py  camera_multithread.py  camera_non_detection.py  camera_qt6.py  camera_qt6_groundtruth.py  moi.py  roi.py
src/tfe/tfe/detector/: yolov8_adaptor.py
src/tfe/tfe/detectors/: __init__.py  basedetector.py  yolov11_adaptor.py  yolov8_adaptor.py  yolox_adaptor.py
src/tfe/tfe/enhance/: normalize.py
src/tfe/tfe/factory/: builder.py  factory.py  registry.py
src/tfe/tfe/io/: __init__.py  aic_result_writer.py  file.py  filedir.py  frame.py  image.py  picklewrap.py  video.py
src/tfe/tfe/objects/: __init__.py  class_label.py  general_object.py  gmo.py  instance.py  motion_model.py  moving_model.py
src/tfe/tfe/ops/: image.py
src/tfe/tfe/road_objects/: general_object.py  moving_model.py
src/tfe/tfe/tracker/: tracker.py
src/tfe/tfe/type/: __init__.py  collection.py  type.py
src/tfe/tfe/utils/: __init__.py  aic_result_writer.py  backend.py  bbox.py  combine.py  config.py  constants.py  device.py  dir.py  distance.py  draw.py  eval_nwrmse.py  geometric_transformation.py  helper.py  image.py  logging.py  print.py  rich.py  visualize.py  xlsx_to_csv.py
src/tfe/tfe/views/: tfe.ui  traffic_flow_estimation_view.py  traffic_flow_estimation_view_20240405.py
src/tfe/tracker/: __init__.py
src/tfe/ultilities/: convert_json_labelme_to_json_rmois.py  convert_separate_tracking_result_into_rmois.py  drop_frame_with_json.py  resize_json_rmois.py
src/tfe/utils/: __init__.py  print.py
src/tfe/utils/eval/: run_eval.sh
(+455 files in other folders)
