[tool.poetry]
name          = "Traffic Flow Estimation"
version       = "0.0.2"
description   = "Deep learning model."
license       = "Apache-2.0"
authors       = [
    "Automation Lab - Sungkyunkwan University",
]
maintainers   = [
    "Automation Lab - Sungkyunkwan University",
]
readme        = "README.md"
keywords      = [
    "computer vision",
    "image processing",
    "deep learning",
    "research",
]
classifiers = [
    "Development Status :: 1 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
]
packages = [
    {include = "tfe"        , from = "."},
    {include = "ultralytics", from = "third_party"},
    {include = "yolox"      , from = "third_party/YOLOX"},
]
include = [
    "LICENSE",
    "pyproject.toml",
]
exclude = []

[tool.poetry.dependencies]
python    = ">=3.10, <3.13"


[tool.poetry.extras]
dev = [
#    "argoverse"
#    "av2"
]

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# Comments
#
# 1. Fix thop error: AttributeError: 'some_object' object has no attribute 'total_ops'
# pip install --upgrade git+https://github.com/sile/pytorch-OpCounter.git@8f115d4aeaee787d7347b75f30be28164b02ccaa
